--- a/sass/layout/_hero-section.scss
+++ b/sass/layout/_hero-section.scss
@@ -1,7 +1,7 @@
 .hero-section {
     margin: 0 auto;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("../../imeges/hero/mobile-hero.jpg");
+    url("../imeges/hero/mobile-hero.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -28,7 +28,7 @@ screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
     .hero-section {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url("../../imeges/hero/mobile-hero@2x.jpg");
+        url("../imeges/hero/mobile-hero@2x.jpg");
     }
 }
 
@@ -37,7 +37,7 @@ screen and (min-resolution: 2dppx) {
 
     .hero-section {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url("../../imeges/hero/tablet-hero.jpg");
+    url("../imeges/hero/tablet-hero.jpg");
     }
 }
 
@@ -46,7 +46,7 @@ screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
     .hero-section {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url("../../imeges/hero/tablet-hero@2x.jpg");
+            url("../imeges/hero/tablet-hero@2x.jpg");
     }
 }
 // ============================================1200==============================================
@@ -58,7 +58,7 @@ screen and (min-resolution: 2dppx) {
         padding-top: 200px;
         padding-bottom: 200px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url("../../imeges/hero/descktop-hero.jpg");
+            url("../imeges/hero/descktop-hero.jpg");
     }
 }
 
@@ -67,6 +67,6 @@ screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
     .hero-section {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url("../../imeges/hero/descktop-hero@2x.jpg");
+            url("../imeges/hero/descktop-hero@2x.jpg");
     }
 }
