--- a/css/main.css
+++ b/css/main.css
@@ -409,8 +409,9 @@ button {
 .modal {
   position: absolute;
   max-width: 450px;
-  width: 100%;
-  min-height: 609px;
+  width: 94%;
+  max-height: 609px;
+  height: 94%;
   background-color: #FFFFFF;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -418,6 +419,7 @@ button {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 40px;
+  overflow-y: scroll;
 }
 
 .backdrop .modal-button-close {
