--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,8 +1,9 @@
 .modal {
     position: absolute;
     max-width: 450px;
-    width: 100%;
-    min-height: 609px;
+    width: 94%;
+    max-height: 609px;
+    height: 94%;
     background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -12,6 +13,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 40px;
+    overflow-y: scroll;
 }
 
 .backdrop .modal-button-close {
