--- a/css/main.css
+++ b/css/main.css
@@ -526,6 +526,7 @@ button {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  border: none;
 }
 
 .modal .link {
