--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -123,6 +123,7 @@
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    border: none;
 
 }
 
